<resources>
    <string name="app_name">thankDiary</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>

    <string name="test_text">테스트 문구입니다.</string>
    <string name="test_success">성공</string>
    <string name="test_failure">실패</string>

    <string name="write_title">오늘의 감사한 일을 떠올려보세요.</string>
    <string name="write_sub_title">사소한 것이라도 좋습니다.</string>
    <string name="write_content_first">첫 번째 감사함을 메모해보세요.</string>
    <string name="write_content_second">두 번째 감사함을 메모해보세요.</string>
    <string name="write_content_third">세 번째 감사함을 메모해보세요.</string>
    <string name="write_save">저장</string>
    <string name="write_content_check">감사함을 모두 메모해주세요.</string>
    <string name="write_save_success">저장되었습니다.</string>
    <string name="write_save_failure">다시 저장해주세요.</string>

    <string name="app_title">감사일기</string>
    <string name="splash_sub_title">"감사일기를 통해 나는 비로소 인생에서 소중한 것이 무엇인지, 삶의 초점을 어디에 맞춰야 하는지를 알게 되었다."</string>
    <string name="splash_sub_title_writer">- 오프라 윈프리 -</string>

    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_id_hint">아이디를 입력해주세요</string>
    <string name="sign_up_pw_hint">비밀번호를 입력해주세요</string>
    <string name="sign_up_question_hint">질문에 대한 답을 입력해주세요</string>
    <string name="sign_up_question_desc">* 비밀번호 찾기에 사용됩니다</string>
    <string name="sign_up_complete">완료</string>
    <string name="sign_up_cancel">취소</string>
    <string name="sign_up_id_check">이미 사용 중인 아이디입니다.</string>
    <string name="sign_up_success">회원가입 되었습니다.</string>
    <string name="sign_up_failure">다시 회원가입을 시도해주세요</string>
    <string name="sign_up_id_length">아이디는 5글자 이상 20글자 미만으로 입력해주세요</string>
    <string name="sign_up_id_pattern">아이디는 5~20자의 영문자 또는 영문자+숫자만 가능합니다</string>
    <string name="sign_up_pw_length">비밀번호는 5글자 이상 20글자 미만으로 입력해주세요</string>
    <string name="sign_up_pw_pattern">비밀번호는 5~20글자 영문자 또는 영문자+숫자만 가능합니다</string>
    <string name="sign_up_pw_match_id">아이디와 동일한 비밀번호는 사용할 수 없습니다</string>

    <string name="login_find_password">비밀번호 찾기</string>
    <string name="login">로그인</string>

    <string name="login_again_msg">로그인을 다시 시도해주세요.</string>
    <string name="login_password_error">비밀번호가 일치하지 않습니다.</string>
    <string name="login_id_error">아이디가 존재하지 않습니다.</string>

    <string name="network_not_working">네트워크가 원활하지 않습니다.</string>

    <string name="history_view_by_day">일별 보기</string>
    <string name="history_view_all">한 눈에 보기</string>

    <string name="first">"1. "</string>
    <string name="second">"2. "</string>
    <string name="third">"3. "</string>

    <string name="find_pw_title">비밀번호 찾기</string>
    <string name="find_pw_new_hint">새 비밀번호를 입력해주세요.</string>
    <string name="find_pw_new_check_hint">새 비밀번호를 재입력해주세요.</string>
    <string name="find_pw_question_check">질문의 답이 틀렸습니다.</string>
    <string name="change_pw_success">비밀번호가 변경되었습니다.</string>
    <string name="change_pw_failure">비밀번호 변경이 실패하였습니다.</string>

    <string name="user_setting">사용자 설정</string>
    <string name="user_setting_written">내가 쓴 글</string>
    <string name="user_setting_desc">설명서</string>
    <string name="user_setting_logout">로그아웃</string>
    <string name="user_setting_alarm">알림 설정</string>>
    <string name="user_setting_suggest">문의 suy0226@gmail.com</string>
    <string name="user_setting_suggest_hint">문의사항이 있다면 입력해주세요.</string>
    <string name="user_setting_logout_message">로그아웃 하시겠습니까?</string>
    <string name="user_setting_logout_yes">예</string>
    <string name="user_setting_logout_no">아니오</string>

    <string-array name="description">
        <item>"하루에 3가지 기록만 가능합니다. 하루가 지나기 전까지 수정이 가능하며, 해당 날짜가 지나면 수정 및 삭제가 불가능합니다."</item>
        <item>"보기 방식은 2가지 방식을 제공합니다. 실제 일기처럼 하나씩 넘겨가며 보는 방식과 쓴 날짜별로 한 눈에 보는 방식입니다."</item>
        <item>"회원가입 시 있던 질문은 반드시 입력한 그대로 기억해야합니다. 잊어버리실 경우, 비밀번호를 찾는데 어려움이 있을 수 있습니다."</item>
        <item>"앱을 삭제 후 재설치하여도, 저장된 기록은 사라지지 않습니다."</item>
    </string-array>
</resources>