<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown">

    <TextView
        android:id="@+id/find_pw_tv_title"
        style="@style/Text.TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_pw_title"
        android:textColor="@color/brown_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/find_pw_guide_top" />

    <EditText
        android:id="@+id/find_pw_et_id"
        style="@style/Text.ContentStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_box_height"
        android:layout_marginHorizontal="@dimen/input_box_margin_horizontal"
        android:layout_marginTop="@dimen/input_box_between_text_margin_top"
        android:background="@drawable/bg_input_box"
        android:hint="@string/sign_up_id_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingHorizontal="@dimen/input_box_padding_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/find_pw_tv_title" />

    <Spinner
        android:id="@+id/find_pw_spinner_question"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_box_height"
        android:layout_marginHorizontal="@dimen/input_box_margin_horizontal"
        android:layout_marginTop="@dimen/input_box_margin_top"
        android:background="@drawable/bg_input_box"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/find_pw_et_id" />

    <EditText
        android:id="@+id/find_pw_et_question_answer"
        style="@style/Text.ContentStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_box_height"
        android:layout_marginHorizontal="@dimen/input_box_margin_horizontal"
        android:layout_marginTop="@dimen/input_box_margin_top"
        android:background="@drawable/bg_input_box"
        android:hint="@string/sign_up_question_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingHorizontal="@dimen/input_box_padding_horizontal"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/find_pw_spinner_question" />

    <EditText
        android:id="@+id/find_pw_et_new"
        style="@style/Text.ContentStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_box_height"
        android:layout_marginHorizontal="@dimen/input_box_margin_horizontal"
        android:layout_marginTop="@dimen/input_box_margin_top"
        android:background="@drawable/bg_input_box"
        android:hint="@string/find_pw_new_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/input_box_padding_horizontal"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/find_pw_et_question_answer" />

    <EditText
        android:id="@+id/find_pw_et_new_check"
        style="@style/Text.ContentStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_box_height"
        android:layout_marginHorizontal="@dimen/input_box_margin_horizontal"
        android:layout_marginTop="@dimen/input_box_margin_top"
        android:background="@drawable/bg_input_box"
        android:hint="@string/find_pw_new_check_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/input_box_padding_horizontal"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/find_pw_et_new" />

    <TextView
        style="@style/Text.ContentStyle"
        android:layout_width="@dimen/text_cancel_size"
        android:layout_height="@dimen/text_cancel_size"
        android:gravity="center"
        android:text="@string/sign_up_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_pw_et_new_check" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/find_pw_guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/find_pw_guide_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>