<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".src.splash.SplashActivity">

    <TextView
        android:id="@+id/splash_tv_title"
        style="@style/Text.TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/brown_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/splash_guide_top" />

    <ImageView
        android:id="@+id/splash_iv_diary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_image_margin_top"
        android:src="@drawable/ic_diary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_tv_title" />

    <TextView
        android:id="@+id/splash_tv_sub_title"
        style="@style/Text.ContentStyle"
        android:layout_width="@dimen/sub_title_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/splash_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/splash_guide_bottom" />

    <TextView
        style="@style/Text.ContentStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sub_title_writer_margin_top"
        android:text="@string/splash_sub_title_writer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_tv_sub_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/splash_guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/splash_guide_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>